--- a/CS439FinalProject.ipynb
+++ b/CS439FinalProject.ipynb
@@ -4349,6 +4349,23 @@
     "\n",
     "Overall the histogram shows that the simulated student performs almost the same across most majors. The model only creates small differences. The workload features do move predictions, but the range stays narrow."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c5d6234",
+   "metadata": {},
+   "source": [
+    "### Acknowledgements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3bcd2aa",
+   "metadata": {},
+   "source": [
+    "- Kaggle data by Lai Ng - [SOURCE](https://www.kaggle.com/datasets/lainguyn123/student-performance-factors)\n",
+    "- Rutgers Data provided by Akash Dubey (ad2046), Ayan Zia (az610), Ani Tiwary (at1610)\n"
+   ]
   }
  ],
  "metadata": {
